Added new hero image

--- a/index.html
+++ b/index.html
@@ -5,29 +5,36 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Lernantino // Web Developer</title>
-  <link rel="stylesheet" href="./assets/css/style.css" />
+  <title>Barrah // Web Developer</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
   <!-- main logo / nav -->
   <header>
-    <h1>Lernantino</h1>
+    <a href="home" class="logo"><h1>BAR<br>RAH</h1></a>
     <nav>
+      <a href="about">About</a>
+      <a href="portfolio">Portfolio</a>
+      <a href="contact">Contact</a>
     </nav>
   </header>
 
   <!-- hero banner -->
   <section class="hero-banner">
+    <img src="./images/" alt="">
     <div>
-      <h2>Cool subtitle here!</h2>
+      <h2>Go ahead, say hi!</h2>
     </div>
   </section>
 
   <main class="page-wrapper">
     <!-- about me -->
     <section class="page-section" id="about">
-      <h2>About Me</h2>
+      <h2>About me</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus non luctus lectus. Sed non sodales ex. Proin at felis varius, consequat arcu ultrices, varius neque. Maecenas molestie sagittis odio ac maximus. Maecenas imperdiet sit amet metus ac scelerisque. Proin nisi diam, ullamcorper a mauris a, molestie bibendum elit. Aenean blandit dui vehicula, suscipit nisi vel, gravida turpis. Ut a nisi accumsan, faucibus magna sit amet, commodo mauris. Vestibulum suscipit odio a viverra pulvinar. Integer consectetur porta est at sagittis. Phasellus mattis odio at orci venenatis aliquet.
+
+      Nulla fringilla tincidunt leo sed semper. Morbi consectetur condimentum ligula feugiat suscipit. Nulla interdum gravida arcu, ut vehicula quam accumsan sed. Cras ac mauris id sapien dignissim tristique. Sed molestie est mi, a accumsan ex vestibulum vitae. Ut feugiat erat sed augue aliquam auctor. Curabitur turpis diam, rhoncus quis porttitor ut, rutrum a justo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi viverra lobortis lectus eget facilisis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Vivamus eget neque at nunc condimentum ultricies. Nullam eleifend, leo egestas viverra porta, ex ante rhoncus urna, ac dapibus tortor dui at enim. Nullam faucibus a lacus ut pulvinar.</p>
     </section>
 
     <!-- portfolio container -->
@@ -37,9 +44,17 @@
 
     <!-- contact -->
     <section class="page-section contact" id="contact">
-      <h2>Contact Me</h2>
+      <h2>Contact me</h2>
+      <a href="phone"><strong>0712.3456.7890</strong></a>
+      <a href="email"><strong>email@email.com</strong></a>
+      <a href="github"><strong>GitHub</strong></a>
     </section>
   </main>
 </body>
+
+<!-- footer -->
+<footer>
+  Made by Chukwudi Barrah for the Trilogy Frontend Web Development Bootcamp. 2022.
+</footer>
 
 </html>
