--- a/index.html
+++ b/index.html
@@ -22,32 +22,49 @@
 
   <!-- hero banner -->
   <section class="hero-banner">
-    <img src="./images/" alt="">
+    <img src="images/hero.jpeg" alt="">
     <div>
       <h2>Go ahead, say hi!</h2>
     </div>
   </section>
 
-  <main class="page-wrapper">
+  <main class="pageWrapper">
     <!-- about me -->
-    <section class="page-section" id="about">
-      <h2>About me</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus non luctus lectus. Sed non sodales ex. Proin at felis varius, consequat arcu ultrices, varius neque. Maecenas molestie sagittis odio ac maximus. Maecenas imperdiet sit amet metus ac scelerisque. Proin nisi diam, ullamcorper a mauris a, molestie bibendum elit. Aenean blandit dui vehicula, suscipit nisi vel, gravida turpis. Ut a nisi accumsan, faucibus magna sit amet, commodo mauris. Vestibulum suscipit odio a viverra pulvinar. Integer consectetur porta est at sagittis. Phasellus mattis odio at orci venenatis aliquet.
+    <section class="pageSection" id="about">
+      <h2>About<br>me</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus non luctus lectus. Sed non sodales ex. Proin at felis varius, consequat arcu ultrices, varius neque. Maecenas molestie sagittis odio ac maximus. Maecenas imperdiet sit amet metus ac scelerisque. Proin nisi diam, ullamcorper a mauris a, molestie bibendum elit. Aenean blandit dui vehicula, suscipit nisi vel, gravida turpis. Ut a nisi accumsan, faucibus magna sit amet, commodo mauris. Vestibulum suscipit odio a viverra pulvinar. Integer consectetur porta est at sagittis. Phasellus mattis odio at orci venenatis aliquet.<br>
 
       Nulla fringilla tincidunt leo sed semper. Morbi consectetur condimentum ligula feugiat suscipit. Nulla interdum gravida arcu, ut vehicula quam accumsan sed. Cras ac mauris id sapien dignissim tristique. Sed molestie est mi, a accumsan ex vestibulum vitae. Ut feugiat erat sed augue aliquam auctor. Curabitur turpis diam, rhoncus quis porttitor ut, rutrum a justo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi viverra lobortis lectus eget facilisis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Vivamus eget neque at nunc condimentum ultricies. Nullam eleifend, leo egestas viverra porta, ex ante rhoncus urna, ac dapibus tortor dui at enim. Nullam faucibus a lacus ut pulvinar.</p>
     </section>
 
     <!-- portfolio container -->
-    <section class="page-section" id="work">
+    <section class="pageSection" id="work">
       <h2>Work</h2>
+      <div class="imageParent">
+        <div id="firstApp" class="featured">
+        <a href="https://chukwudibarrah.github.io/08-stuplp/"><h3>Bootcamp first mini project</h3><p>HTML/CSS</p>
+        </a>
+        </div>
+
+        <div id="secondApp" class="appGrid">
+        <a href="https://chukwudibarrah.github.io/code-refactor/"><h3>Code-refactor project</h3><p>HTML/CSS</p></a>
+        </div>
+
+        <div id="thirdApp" class="appGrid">
+        <a href="https://chukwudibarrah.github.io/CSS-Snippet-Cheat-Sheet/"><span class="boldPart">CSS snippet cheat sheet</span><br>HTML/CSS</a>
+        </div>
+
+      </div>
     </section>
 
     <!-- contact -->
-    <section class="page-section contact" id="contact">
+    <section class="pageSection" id="contact">
       <h2>Contact me</h2>
+      <div class="contactDetails">
       <a href="phone"><strong>0712.3456.7890</strong></a>
       <a href="email"><strong>email@email.com</strong></a>
       <a href="github"><strong>GitHub</strong></a>
+    </div>
     </section>
   </main>
 </body>
