Updated design and links

--- a/index.html
+++ b/index.html
@@ -41,18 +41,20 @@
     <section class="pageSection" id="work">
       <h2>Work</h2>
       <div class="imageParent">
-        <div id="firstApp" class="featured">
-        <a href="https://chukwudibarrah.github.io/08-stuplp/"><h3>Bootcamp first mini project</h3><p>HTML/CSS</p>
-        </a>
-        </div>
+        <a href="https://chukwudibarrah.github.io/08-stuplp/" id="firstApp" class="featured">
+          <h3>Bootcamp first mini project</h3>
+          <p>HTML/CSS</p>
+          </a>
 
-        <div id="secondApp" class="appGrid">
-        <a href="https://chukwudibarrah.github.io/code-refactor/"><h3>Code-refactor project</h3><p>HTML/CSS</p></a>
-        </div>
+          <a href="https://chukwudibarrah.github.io/code-refactor/" id="secondApp" class="appGrid">
+            <h3>Code-refactor project</h3>
+            <p>HTML/CSS</p>
+            </a>
 
-        <div id="thirdApp" class="appGrid">
-        <a href="https://chukwudibarrah.github.io/CSS-Snippet-Cheat-Sheet/"><span class="boldPart">CSS snippet cheat sheet</span><br>HTML/CSS</a>
-        </div>
+            <a href="https://chukwudibarrah.github.io/CSS-Snippet-Cheat-Sheet/" id="thirdApp" class="appGrid">
+              <h3>CSS snippet cheat sheet</h3>
+              <p>HTML/CSS</p>
+              </a>
 
       </div>
     </section>
