--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
   <!-- main logo / nav -->
   <header>
-    <a href="home" class="logo"><h1>BAR<br>RAH</h1></a>
+    <a href="#home" class="logo"><h1>BAR<br>RAH</h1></a>
     <nav>
-      <a href="about">About</a>
-      <a href="portfolio">Portfolio</a>
-      <a href="contact">Contact</a>
+      <a href="#about">About</a>
+      <a href="#work">Portfolio</a>
+      <a href="#contact">Contact</a>
     </nav>
   </header>
 
@@ -24,7 +24,7 @@
   <section class="hero-banner">
     <img src="images/hero.jpeg" alt="">
     <div>
-      <h2>Go ahead, say hi!</h2>
+      <a href="#contact"><h2>Go ahead, say hi!</h2></a>
     </div>
   </section>
 
