Font size update

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <!-- contact -->
     <section class="pageSection" id="contact">
-      <h2>Contact me</h2>
+      <h2>Contact<br>me</h2>
       <div class="contactDetails">
       <a href="phone"><strong>0712.3456.7890</strong></a>
       <a href="email"><strong>email@email.com</strong></a>
