Updated the README with project details

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Barrah // Web Developer</title>
   <link rel="stylesheet" href="style.css" />
@@ -64,7 +64,7 @@
       <h2>Contact<br>me</h2>
       <div class="contactDetails">
       <a href="phone"><strong>0712.3456.7890</strong></a>
-      <a href="email"><strong>email@email.com</strong></a>
+      <a href="mailto:myemail@provider.com"><strong>email@email.com</strong></a>
       <a href="github"><strong>GitHub</strong></a>
     </div>
     </section>
